--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
   background: #000 !important;
 }
 .con {
-  background: url("https://images.unsplash.com/photo-1566674717261-e3b344428702?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=635&q=80") !important;
+  background: url("https://images.unsplash.com/photo-1551892644-51a6e2e8fc65?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=640&q=80");
   background-repeat: no-repeat !important;
   background-position: center !important;
   background-blend-mode: darken;
@@ -21,6 +21,7 @@ body {
   justify-content: center;
   color: rgb(255, 206, 146) !important;
   position: relative;
+  /* animation: bg 0.3s ease-in-out infinite; */
 }
 .con::after {
   content: "";
@@ -82,12 +83,24 @@ footer > .text-center > a,
 footer > .text-center {
   font-family: "Open Sans", sans-serif !important;
 }
+
 @keyframes blink {
   0% {
     opacity: 0;
   }
   100% {
     opacity: 1;
+  }
+}
+@keyframes bg {
+  0% {
+    background: url("https://images.unsplash.com/photo-1530103862676-de8c9debad1d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80") !important;
+  }
+  50% {
+    background: url("https://images.unsplash.com/photo-1551892644-51a6e2e8fc65?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=640&q=80");
+  }
+  100% {
+    background: url("https://images.unsplash.com/photo-1530103862676-de8c9debad1d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80") !important;
   }
 }
 
