--- a/css/style.css
+++ b/css/style.css
@@ -6,22 +6,82 @@
 }
 body {
   background: #000 !important;
-}
-.con {
-  background: url("https://images.unsplash.com/photo-1551892644-51a6e2e8fc65?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=640&q=80");
-  background-repeat: no-repeat !important;
-  background-position: center !important;
-  background-blend-mode: darken;
   width: 100vw;
-  height: 93vh;
+  height: 100vh;
+}
+
+#page {
+}
+
+/* form page style */
+.form-con {
+  width: 100vw;
+  height: 91vh;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background: url("https://images.unsplash.com/photo-1579532649672-13fac8cde626?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=634&q=80");
+  background-repeat: no-repeat !important;
+  background-position: center !important;
+  background-blend-mode: darken;
   color: rgb(255, 206, 146) !important;
   position: relative;
-  /* animation: bg 0.3s ease-in-out infinite; */
+}
+.form-con::after {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.13);
+  position: absolute;
+  width: 100vw;
+  height: 93vh;
+  z-index: 1;
+}
+
+#form-name {
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bold;
+  color: black;
+  width: 10rem;
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#name {
+  background: #e9d4d2;
+  border: none;
+  display: block;
+  margin-bottom: 1rem;
+}
+#button {
+  background: #dac8c7;
+  border: none;
+  display: block;
+  width: 4rem;
+  font-size: 2rem;
+  font-family: "Dancing Script", cursive;
+}
+/* form page style ends */
+
+/* wish page style */
+.con {
+  width: 100vw;
+  height: 93vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: url("https://images.unsplash.com/photo-1551892644-51a6e2e8fc65?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=640&q=80");
+  background-repeat: no-repeat !important;
+  background-position: center !important;
+  background-blend-mode: darken;
+  color: rgb(255, 206, 146) !important;
+  position: relative;
 }
 .con::after {
   content: "";
@@ -32,8 +92,9 @@ body {
   z-index: 1;
 }
 .con > .container {
-  height: 35rem;
+  height: 30rem;
   padding: 2rem;
+  opacity: 0.8;
   z-index: 2;
 }
 h1 {
@@ -54,9 +115,27 @@ h1 {
   animation: blink 0.3s ease-in-out infinite;
 }
 
-.h2 {
+.new {
+  z-index: 4;
   font-family: "Open Sans", sans-serif !important;
-  font-weight: lighter !important;
+  font-weight: bold !important;
+  padding: 0.2rem;
+  border: none;
+  box-shadow: none;
+  width: 5rem;
+  border-radius: 5rem;
+  color: #000;
+  background: rgb(255, 206, 146) !important;
+  position: absolute;
+  bottom: 0.5rem;
+}
+/* wish page style ends */
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100vw;
+  z-index: 5;
 }
 footer > .container {
   display: flex;
@@ -90,17 +169,6 @@ footer > .text-center {
   }
   100% {
     opacity: 1;
-  }
-}
-@keyframes bg {
-  0% {
-    background: url("https://images.unsplash.com/photo-1530103862676-de8c9debad1d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80") !important;
-  }
-  50% {
-    background: url("https://images.unsplash.com/photo-1551892644-51a6e2e8fc65?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=640&q=80");
-  }
-  100% {
-    background: url("https://images.unsplash.com/photo-1530103862676-de8c9debad1d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80") !important;
   }
 }
 
