moved new button

--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ h1 {
   color: #000;
   background: rgb(255, 206, 146) !important;
   position: absolute;
-  bottom: 0.8rem;
+  top: 3rem;
 }
 /* wish page style ends */
 
