--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ form {
   z-index: 1;
 }
 .con > .container {
-  height: 30rem;
+  height: auto;
   padding: 2rem;
   opacity: 0.8;
   z-index: 2;
@@ -112,9 +112,12 @@ h1 {
   border-right: 0.1rem solid #fff;
   animation: blink 0.3s ease-in-out infinite;
 }
-.h2 {
+h2 {
   font-family: "Open Sans", sans-serif !important;
   font-weight: lighter !important;
+  position: relative;
+  color: rgb(255, 196, 146) !important;
+  bottom: -3rem;
 }
 .new {
   z-index: 4;
